# fft_water_sim

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  README.md  imgui.ini  main.cpp  shell.html
include/: Application.h  CMakeLists.txt  Camera.h  OceanSim.h  Pipelines.h  Renderer.h  ResourceManager.h  SimulationConfig.h  Textures.h
resources/: compute.wgsl  fft.wgsl  foam.wgsl  shader.wgsl  skybox.wgsl  time_spectrum.wgsl  water.wgsl
source/: CMakeLists.txt  main.cpp
src/: Application.cpp  CMakeLists.txt  Camera.cpp  OceanSim.cpp  Renderer.cpp  ResourceManager.cpp  webgpu-utils.cpp
webgpu/: CMakeLists.txt
